--- a/app/globals.css
+++ b/app/globals.css
@@ -1,76 +1,85 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
+    /* Default background color of <body />...etc */
+    --background: 0, 0%, 98%;
+    --foreground: 240, 5.9%, 10%;
+    /* Muted backgrounds such as <TabsList />, <Skeleton /> and <Switch /> */
+    --muted: 210, 40%, 96.1%;
+    --muted-foreground: 215.4, 16.3%, 46.9%;
+    /* Background color for <Card /> */
+    --card: 0, 0%, 100%;
+    --card-foreground: 222.2, 47.4%, 11.2%;
+    /* Background color for popovers such as <DropdownMenu />, <HoverCard />, <Popover /> */
+    --popover: 240, 5.9%, 10%;
+    --popover-foreground: 0, 0%, 98%;
+    /* Default border color */
+    --border: 214.3, 31.8%, 91.4%;
+    /* Border color for inputs such as <Input />, <Select />, <Textarea /> */
+    --input: 214.3, 31.8%, 91.4%;
+    /* Primary colors for <Button /> */
+    --primary: 240, 4.9%, 83.9%;
+    --primary-foreground: 210, 40%, 98%;
+    /* Secondary colors for <Button /> */
+    --secondary: 210, 40%, 96.1%;
+    --secondary-foreground: 222.2, 47.4%, 11.2%;
+    /* Used for accents such as hover effects on <DropdownMenuItem>, <SelectItem>...etc */
+    --accent: 0, 0%, 98%;
+    --accent-foreground: 240, 5.9%, 10%;
+    /* Used for destructive actions such as <Button variant="destructive"> */
+    --destructive: 0, 100%, 50%;
+    --destructive-foreground: 210, 40%, 98%;
+    /* Used for focus ring */
+    --ring: 240, 4.8%, 95.9%;
+    /* Border radius for card, input and buttons */
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
+    /* Default background color of <body />...etc */
+    --background: 240, 5.9%, 10%;
+    --foreground: 0, 0%, 98%;
+    /* Muted backgrounds such as <TabsList />, <Skeleton /> and <Switch /> */
+    --muted: 210, 40%, 96.1%;
+    --muted-foreground: 215.4, 16.3%, 46.9%;
+    /* Background color for <Card /> */
+    --card: 0, 0%, 100%;
+    --card-foreground: 222.2, 47.4%, 11.2%;
+    /* Background color for popovers such as <DropdownMenu />, <HoverCard />, <Popover /> */
+    --popover: 0, 0%, 98%;
+    --popover-foreground: 240, 5.9%, 10%;
+    /* Default border color */
+    --border: 214.3, 31.8%, 91.4%;
+    /* Border color for inputs such as <Input />, <Select />, <Textarea /> */
+    --input: 214.3, 31.8%, 91.4%;
+    /* Primary colors for <Button /> */
+    --primary: 240, 5.9%, 10%;
+    --primary-foreground: 210, 40%, 98%;
+    /* Secondary colors for <Button /> */
+    --secondary: 210, 40%, 96.1%;
+    --secondary-foreground: 222.2, 47.4%, 11.2%;
+    /* Used for accents such as hover effects on <DropdownMenuItem>, <SelectItem>...etc */
+    --accent: 240, 5.9%, 10%;
+    --accent-foreground: 0, 0%, 98%;
+    /* Used for destructive actions such as <Button variant="destructive"> */
+    --destructive: 0, 100%, 50%;
+    --destructive-foreground: 210, 40%, 98%;
+    /* Used for focus ring */
+    --ring: 240, 5.9%, 10%;
+    /* Border radius for card, input and buttons */
+    --radius: 0.5rem;
   }
 }
