--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
-    --radius: 0.75rem;
+    --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -71,6 +71,28 @@
   }
 }
 
+.parallax-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/background.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.parallax-foreground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/omen.jpg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 /* Loader CSS */
 
 .spinner {
@@ -82,10 +104,6 @@
   animation: spin-anim 1.2s linear infinite;
 }
 
-.hover-line {
-  @apply hover:underline hover:underline-offset-8;
-}
-
 @keyframes spin-anim {
   0% {
     transform: rotate(0deg);
@@ -93,6 +111,13 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+/* Loader CSS */
+
+.hover-line:hover {
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .prose {
